[package]
name = "click"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
reqwest = "0.11.20"
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
symlink = "0.1.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
